# spendsmart

./: .gitignore  README.md  pyproject.toml  xargs
spendsmart.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
spendsmart/base_static/: base.css
spendsmart/base_templates/: base.html
spendsmart/spends/: apps.py  forms.py  models.py  urls.py  views.py
spendsmart/spends/migrations/: 0001_initial.py  0002_alter_spends_time.py  0003_categories.py  0004_alter_spends_category.py  0005_alter_categories_user_alter_spends_user.py  0006_rename_time_spends_date.py  0007_alter_categories_name.py  0008_alter_spends_category.py  0009_alter_spends_category.py  0010_alter_spends_amount_alter_spends_date.py  0011_categories_amount_sum.py
spendsmart/spends/static/spends/: style.css
spendsmart/spends/static/spends/css/: .add_spends.css.swp  add_spend.css  all_categories.css  index.css  style.css
spendsmart/spends/templates/spends/: add_spends.html  all_categories.html  create_category.html  homepage_ref.html  index.html
spendsmart/spends/templates/spends/include/: control_panel.html
spendsmart/spendsmart/: settings.py  urls.py
spendsmart/users/: .views.py.swp  admin.py  forms.py  models.py  urls.py  views.py
spendsmart/users/migrations/: 0001_initial.py  0002_alter_users_name.py  0003_alter_users_password.py  0004_alter_users_email_profile.py  0005_alter_profile_desc.py  0006_alter_profile_user.py
spendsmart/users/static/users/css/: login.css  (+1 more)
spendsmart/users/templates/users/: login.html  profile.html  register.html
testenv/: pyvenv.cfg
venvspendsmart/: pyvenv.cfg
